# projects

./: Todo  index.html  package-lock.json  package.json  script.js  style.css  ttt.html
.devcontainer/: devcontainer.json
2048/: 2048.html  2048.js
3d/: 3d.html  3d.js
API'S/: apiindex.html
API'S/Find my location/: fml.html  fml.js
Galactic shooter/: gs.js
Games/2048/: 2048.js
Games/3d engine/: 3d.html  3d.js  inputHandler.js  uiHandler.js
Games/Drift 2D/: D2D.css  D2D.html  D2D.js
Games/Flappy Bird/: flappyBird.html  flappyBird.js
Games/Galactic shooter/: gs.html  gs.js
Games/Nueral Network/: nn.css  nn.html  nn.js
Games/Particle Simulator/: particleSim.html  particleSim.js
Games/Search Bar/: search.html  search.js
Games/calculator/: calc.css  calc.html  calc.js
Games/game of life/: gol.css  gol.html  gol.js
Games/game of life/update-cell/: Cargo.toml
Games/game of life/update-cell/src/: lib.rs
Games/physics/: physics.html  physics.js
Games/pong/: pong.css  pong.html  pong.js
Games/snake/: snake.html  snake.js
Games/ttt/: ttt.css  ttt.js
Python/Scanner/: main.py
Search Api/: search.html  search.js
Search Bar/: search.css  search.html  search.js
Searching Algorithms/: sa.html  sa.js
Tools/APIS/: apiindex.html
Tools/Searching Algorithms/: sa.html  sa.js  saHelpers.js
bj/: bj.css  bj.html  bj.js
bj/v1.1/: bjv1.1.html  (+1 more)
calculator/: calc.css  calc.html  calc.js  ttt.js
physics/: physics.js  snake.html  snake.js
pong/: pong.css  pong.html  pong.js
snake/: snake.html  snake.js
ttt/: ttt.css  ttt.html  ttt.js
(+12 files in other folders)
