[package]
name = "update-cell"
version = "0.1.0"
edition = "2024"
authors = ["Colton Prescott <hinuto026@gmail.com>"]
description = "A faster update method for Conways Game of Life"
repository = "https://github.com/dxpressedskittle/projects"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"